Частично написаны 20 и 21 протоколы для сервера и для клиента

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="{{ url_for('static', filename='js/consts.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/login.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/SST.js') }}"></script>
 
 
 </head>
