--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/SPA/roboto_vk_font/roboto_vk_font.css') }}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
-
+    <script type="text/javascript" src="{{ url_for('static', filename='js/Sender.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/consts.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/SST.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/Timer.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/UC.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/PH.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/Painter.js') }}"></script>
+    
+    
 </head>
 <body id="body" style="display: block;">
 <header>
@@ -84,7 +92,7 @@
             </form>
 
             <div id="Dialogs">
-                {% for room in rooms %}
+                <!--
                 <div class="dialog_block" id="id_{{ room|title }}">
                     <div class="avatar_block"><img src=""></div>
                     <div style='cursor: pointer;' class="profile_name_link">
@@ -95,7 +103,7 @@
                         </div>
                     </div>
                 </div>
-                {% endfor %}
+            -->
             </div>
 
         </div>
