--- a/app/static/css/SPA/my_dialogs.css
+++ b/app/static/css/SPA/my_dialogs.css
@@ -422,8 +422,8 @@ a#plus {
 .message_text_current_dialog{
 	margin-left:15%;
 	margin-right: 1%;
-	margin-top: 4.4%;
-	font-size:13px;
+	margin-top: 2%;
+	font-size:90%;
 	word-wrap:break-word;
 }
 
